# height-mapping-ros2

./: README.md
height_mapping_core/: CMakeLists.txt  package.xml
height_mapping_core/include/height_mapping_core/: height_mapping_core.hpp  helper.hpp
height_mapping_core/include/height_mapping_core/height_correctors/: height_map_raycaster.hpp
height_mapping_core/include/height_mapping_core/height_estimators/: height_estimator_base.hpp  height_estimator_kalman.hpp  height_estimator_moving_average.hpp  height_estimator_stat_mean.hpp
height_mapping_core/include/height_mapping_core/height_filters/: height_filter_fast.hpp
height_mapping_core/include/height_mapping_core/height_map/: cloud_types.hpp  height_map.hpp  layer_definitions.hpp
height_mapping_core/src/: height_estimator_kalman.cpp  height_estimator_moving_average.cpp  height_estimator_stat_mean.cpp  height_filter_fast.cpp  height_map.cpp
height_mapping_ros2/: CMakeLists.txt  package.xml
height_mapping_ros2/config/: global_mapping_node.yaml  height_mapping_node.yaml  sensor_processor_node.yaml
height_mapping_ros2/config/include/: heightmap_visualization.yaml
height_mapping_ros2/include/height_mapping_ros2/common/: common.hpp  frame_ids.hpp  point_cloud_ops.hpp  transform_ops.hpp
height_mapping_ros2/include/height_mapping_ros2/height_mapping/core/: core.hpp  global_mapper.hpp  height_mapper.hpp
height_mapping_ros2/include/height_mapping_ros2/height_mapping/ros/: config.hpp  global_mapping_node.hpp  height_mapping_node.hpp  sensor_processor_node.hpp
height_mapping_ros2/include/height_mapping_ros2/height_mapping/types/: height_point.hpp
height_mapping_ros2/launch/: run.launch.py
height_mapping_ros2/launch/include/: global_mapping.launch.py  height_mapping.launch.py  sensor_processor.launch.py
height_mapping_ros2/launch/rviz/: data_collection.rviz  global_mapping.rviz  height_mapping.rviz
height_mapping_ros2/src/core/: global_mapper.cpp  height_mapper.cpp
height_mapping_ros2/src/ros/: global_mapping_node.cpp  height_mapping_node.cpp  sensor_processor_node.cpp
