<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>height_mapping_ros2</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="phuc.visionbike@gmail.com">felixnguyen</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<!-- ROS 2 core dependencies -->
	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>rosidl_default_generators</depend>
	<depend>rosidl_default_runtime</depend>

	<!-- Message dependencies -->
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>std_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_srvs</depend>
	<depend>visualization_msgs</depend>

	<!-- Grid map dependencies -->
	<depend>grid_map_ros</depend>
	<depend>grid_map_core</depend>
	<depend>grid_map_msgs</depend>

	<!-- Vision dependencies -->
	<depend>cv_bridge</depend>

	<!-- TF2 dependencies -->
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>tf2_eigen</depend>

	<!-- Custom height mapping core library -->
	<depend>height_mapping_core</depend>

	<!-- PCL -->
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
